# syncflow

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.superpowers/brainstorm/276-1776672641/content/: architecture.html  core-modules.html  signal-server.html
.superpowers/brainstorm/276-1776672641/state/: server-stopped
docs/superpowers/: syncflow-workbench-wireframe.html
docs/superpowers/plans/: 2026-04-20-syncflow-plan.md  2026-04-21-mdns-p2p-sync.md  2026-04-22-syncflow-e2e-closure-plan.md  2026-04-22-syncflow-lan-manual-validation.md  2026-04-23-syncflow-pc-mobile-manual-validation.md  2026-04-23-syncflow-single-pc-dual-instance.md  2026-04-27-baidu-netdisk-cloud-sync-plan.md  2026-05-02-syncflow-local-file-manager.md  2026-05-13-syncflow-codex-style-ui-refresh.md
docs/superpowers/specs/: 2026-04-20-syncflow-design.md  2026-04-21-mdns-p2p-sync-design.md  2026-04-22-syncflow-light-notes-workbench-design.md  2026-04-22-syncflow-phase-2-runtime-workbench-design.md  2026-04-24-syncflow-conflict-resolution-design.md  2026-04-27-baidu-netdisk-cloud-sync-design.md  2026-05-02-syncflow-local-file-manager-design.md  2026-05-07-wechat-article-import-design.md  2026-05-13-syncflow-codex-style-ui-design.md
syncflow/: .gitignore  Cargo.toml  README.md
syncflow/.sqlx/: query-5568bb1bc7693ff28db7369a59c5e848e6f1b0bd4d372e1c9d1652497f3cd5ab.json  query-55bef82a40a9e93b83ced721258b65c5fd9950853e7119b38b3409b69553d2cc.json  query-b1b7a6abba76c8c7364201043277002dbaf0a8af4a2db3bd65ee2ba04c3589f2.json
