[workspace]
members = [
    "packages/core",
    "packages/server",
    "packages/client/src-tauri",
]
resolver = "2"

[workspace.dependencies]
# Crypto
chacha20poly1305 = "0.10"
argon2 = "0.5"
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1.5"
aead = "0.5"
# Async
tokio = { version = "1.45", features = ["full"] }
futures = "0.3"
# Storage
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }
# File watching
notify = "6"
notify-debouncer-mini = "0.4"
# WebRTC
webrtc = "0.12"
# mDNS & local HTTP
mdns-sd = "0.12"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
hyper = "1"
bytes = "1"
reqwest = { version = "0.12", features = ["json"] }
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Utilities
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
secrecy = "0.10"
lru = "0.12"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
